--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,7 @@ starlette==0.46.2
 typing-inspection==0.4.0
 typing_extensions==4.13.2
 uvicorn==0.34.2
+sqlalchemy==2.0.21
+psycopg2-binary==2.9.7
+
+
